# curl

docs/examples/: 10-at-a-time.c  Makefile.am  README.md  adddocsref.pl  altsvc.c  anyauthput.c  cacertinmem.c  certinfo.c  chkspeed.c  cookie_interface.c  crawler.c  curlgtk.c  curlx.c  debug.c  ephiperfifo.c  evhiperfifo.c  externalsocket.c  fileupload.c  fopen.c  ftp-wildcard.c  ftpget.c  ftpgetinfo.c  ftpgetresp.c  ftpsget.c  ftpupload.c  ftpuploadfrommem.c  ftpuploadresume.c  getinfo.c  getinmemory.c  getredirect.c  getreferrer.c  ghiper.c  headerapi.c  hiperfifo.c  href_extractor.c  htmltidy.c  htmltitle.cpp  http-post.c  http2-download.c  http2-pushinmemory.c  (+80 more)
lib/: CMakeLists.txt  Makefile.am  altsvc.c  altsvc.h  amigaos.c  amigaos.h  arpa_telnet.h  asyn-ares.c  asyn-thread.c  asyn.h  base64.c  bufref.c  bufref.h  c-hyper.c  c-hyper.h  config-amigaos.h  config-dos.h  config-mac.h  config-os400.h  config-plan9.h  config-riscos.h  config-win32.h  config-win32ce.h  conncache.c  conncache.h  connect.c  connect.h  content_encoding.c  content_encoding.h  cookie.c  cookie.h  curl_addrinfo.c  curl_addrinfo.h  curl_base64.h  curl_config.h.cmake  curl_ctype.c  curl_ctype.h  curl_des.c  curl_des.h  curl_endian.c  (+211 more)
src/: CMakeLists.txt  Makefile.am  mkhelp.pl  slist_wc.c  slist_wc.h  tool_binmode.c  tool_binmode.h  tool_bname.c  tool_bname.h  tool_cb_dbg.c  tool_cb_dbg.h  tool_cb_hdr.c  tool_cb_hdr.h  tool_cb_prg.c  tool_cb_prg.h  tool_cb_rea.c  tool_cb_rea.h  tool_cb_see.c  tool_cb_see.h  tool_cb_wrt.c  tool_cb_wrt.h  tool_cfgable.c  tool_cfgable.h  tool_dirhie.c  tool_help.c  (+59 more)
(+58 files in other folders)
